@@ -16,7 +16,6 @@ import java.util.concurrent.CompletableFuture;
 
 import javax.net.ssl.TrustManagerFactory;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.io.transport.mqtt.MqttBrokerConnection.ConnectionCallback;
@@ -36,7 +35,7 @@ import com.hivemq.client.mqtt.mqtt5.message.subscribe.Mqtt5Subscribe;
 import com.hivemq.client.mqtt.mqtt5.message.unsubscribe.Mqtt5Unsubscribe;
 
 /**
- * The {@link Mqtt5AsyncClientWrapper} provides the wrapper for Mqttv3 async clients
+ * The {@link Mqtt5AsyncClientWrapper} provides the wrapper for Mqttv5 async clients
  *
  * @author Jan N. Klug - Initial contribution
  */
@@ -94,7 +93,7 @@ public class Mqtt5AsyncClientWrapper extends MqttAsyncClientWrapper {
             connectMessageBuilder.willPublish(willPublish);
         }
 
-        if (!StringUtils.isBlank(username) && !StringUtils.isBlank(password) && password != null) {
+        if (username != null && !username.isBlank() && password != null && !password.isBlank()) {
             connectMessageBuilder.simpleAuth().username(username).password(password.getBytes()).applySimpleAuth();
         }
 
@@ -105,5 +104,4 @@ public class Mqtt5AsyncClientWrapper extends MqttAsyncClientWrapper {
     public CompletableFuture<Void> disconnect() {
         return client.disconnect();
     }
-
 }
